[FIXED] :: scroll :: added gap left and right for modal

--- a/src/scss/themes/_purchase.scss
+++ b/src/scss/themes/_purchase.scss
@@ -481,3 +481,14 @@ input.box-80{
 		}
 	}
 }
+
+#purchaseSelectionModal7{
+	.purchase-page{
+		.dropdown-menu.dropdown-menu-right{
+			.registerd-tags{
+				max-height: 235px;
+    			overflow-y: auto;
+			}
+		}
+	}
+}
